# rEmbed

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: rEmbed.h  rembed.h
src/: rEmbed.c  rembed.c
